--- a/paquescolar-web/src/main/webapp/app/reg02Oferta.xhtml
+++ b/paquescolar-web/src/main/webapp/app/reg02Oferta.xhtml
@@ -6,32 +6,32 @@
     xmlns:f="http://java.sun.com/jsf/core"
     template="#{pageContext.servletContext.contextPath}/resources/template/template.xhtml">
     <ui:define name="content">
+        <p:menubar id="menuBar" styleClass="divSticky"> 
+            <p:menuitem value="Nuevo" icon="fa fa-file-o" id="mtmNuevo"
+                        action="#{ofertaBienesServiciosController.prepareCreate}" 
+                        update="pnlFiltro tblParticipantes"/>
+            <p:menuitem value="Modificar" icon="fa fa-edit" id="mtmModificar"
+                        action="#{ofertaBienesServiciosController.prepareEdit}" 
+                        update="pnlFiltro tblParticipantes"/>
+            <p:menuitem value="Guardar" icon="fa fa-save" action="#{ofertaBienesServiciosController.guardar}" 
+                        disabled="#{menuController.usuarioSoloLectura || ofertaBienesServiciosController.deshabilitar}"
+                        update="tblParticipantes"/>
+            <p:menuitem value="Imprimir" icon="fa fa-print" disabled="true"/>
+            <p:menuitem value="Principal" icon="fa fa-home" url="#{pageContext.servletContext.contextPath}/app/inicial.mined"/>
+
+            <f:facet  name="options">  
+                <p:commandButton icon="fa fa-sign-out" value="Salir" action="#{personaController.logout}"/>
+            </f:facet>  
+        </p:menubar>
+
         <div class="ui-g">
             <div class="ui-g-12">
-                <div class="card divSticky">
-                    <p:menubar id="mbMenu"> 
-                        <p:menuitem value="Nuevo" icon="fa fa-file-o" id="mtmNuevo"
-                                    action="#{ofertaBienesServiciosController.prepareCreate}" 
-                                    update="pnlFiltro tblParticipantes"/>
-                        <p:menuitem value="Modificar" icon="fa fa-edit" id="mtmModificar"
-                                    action="#{ofertaBienesServiciosController.prepareEdit}" 
-                                    update="pnlFiltro tblParticipantes"/>
-                        <p:menuitem value="Guardar" icon="fa fa-save" action="#{ofertaBienesServiciosController.guardar}" 
-                                    disabled="#{menuController.usuarioSoloLectura || ofertaBienesServiciosController.deshabilitar}"
-                                    update="tblParticipantes"/>
-                        <p:menuitem value="Imprimir" icon="fa fa-print" disabled="true"/>
-                        <p:menuitem value="Principal" icon="fa fa-home" url="#{pageContext.servletContext.contextPath}/app/inicial.mined"/>
-
-                        <f:facet  name="options">  
-                            <p:commandButton icon="fa fa-sign-out" value="Salir" action="#{personaController.logout}"/>
-                        </f:facet>  
-                    </p:menubar>
-
-                    <h3>
+                <div class="card">
+                    <h1>
                         <i class="fa fa-filter blue" style="font-size: 16px;"></i>
                         <p:spacer width="10" height="8"/>
                         <p:outputLabel value="Filtro de busqueda"/>
-                    </h3>
+                    </h1>
                     <p:panelGrid id="pnlFiltro" columns="2" columnClasses="col2_label,col10" 
                                  style="width: 100%; border:0px none; background-color:transparent;"
                                  styleClass="form-group ui-panelgrid-blank">
@@ -460,7 +460,7 @@
 
         </p:confirmDialog> 
 
-        <p:remoteCommand name="findEntidad" update="mbMenu tblParticipantes nombreCE cldFechaApertura btoAgregarProveedor" actionListener="#{ofertaBienesServiciosController.buscarEntidadEducativa}" />
+        <p:remoteCommand name="findEntidad" update="menuBar tblParticipantes nombreCE cldFechaApertura btoAgregarProveedor" actionListener="#{ofertaBienesServiciosController.buscarEntidadEducativa}" />
         <p:remoteCommand name="rcProductos"  oncomplete="PF('dlgProductos').show();" update=":frmPrincipal:pnlProductos" />
     </ui:define>
 </ui:composition>
