--- a/paquescolar-web/src/main/webapp/app/comunes/datosGenProveedor.xhtml
+++ b/paquescolar-web/src/main/webapp/app/comunes/datosGenProveedor.xhtml
@@ -4,18 +4,17 @@
     xmlns:f="http://java.sun.com/jsf/core"
     xmlns:ui="http://java.sun.com/jsf/facelets"
     xmlns:h="http://java.sun.com/jsf/html">
-
-    <h3>
+    <h1>
         <i class="fa fa-id-card-o" style="font-size: 16px;" aria-hidden="true"></i>
         <p:spacer width="10" height="8"/>
         <p:outputLabel value="Datos de #{proveedorController.empresa.razonSocial}"/>
-    </h3>
+    </h1>
     <p:accordionPanel id="pnlFoto">
         <p:tab title="Información General">
             <p:panelGrid columns="2" columnClasses="col11,col1" 
                          styleClass="ui-panelgrid-blank form-group form-elements" 
                          style="border:0px none; background-color:transparent;">
-                <p:panelGrid columns="2" columnClasses="col4_label,col8" >
+                <p:panelGrid columns="2" columnClasses="col3_label,col9" style="width: 100%;" styleClass="ui-panelgrid-blank form-group form-elements"  >
                     <p:outputLabel value="N.I.T.:"/>
                     <p:outputLabel styleClass="negrita" value="#{proveedorController.empresa.numeroNit}" />
                     <p:outputLabel value="Municipio y Departamento:"/>
